tests/scan/fixtures/validation/negative/clean_cargo_clean_scheduler_crate/src/lib.rs
//! A clean Rust crate: clean_scheduler_crate.

pub fn hello() -> &'static str { "hello" }
